# nm

./: CMakeLists.txt  Makefile  a.out  ft_nm  ft_otool  p1  p2  test.c  test_sort.c  their  their_err  true_nm.c
ft_nm.dSYM/Contents/Resources/DWARF/: ft_nm
includes/: ft_nm.h
my_test/: mine  mine_err  p2  test.py  test2.py  test_nm.py  test_otool.py  their  their_err
nm/: Makefile  a.out  ft_nm  p1  p2
nm/includes/: ft_nm.h
nm/srcs/: debug.c  ft_nm.c  handle_32.c  handle_64.c  handle_ar.c  handle_fat.c  print_32.c  print_64.c  sort_32.c  sort_64.c  util.c  util2.c
otool/: Makefile  ft_otool  p1  p2
otool/ft_otool.dSYM/Contents/Resources/DWARF/: ft_otool
otool/includes/: ft_otool.h
otool/srcs/: debug.c  ft_otool.c  handle_32.c  handle_64.c  handle_ar.c  handle_fat.c  print_32.c  print_64.c  print_type.c  sort_32.c  sort_64.c  util.c  util2.c
srcs/: debug.c  error.c  ft_nm.c  handle_32.c  handle_64.c  handle_ar.c  handle_fat.c  print_32.c  print_64.c  print_type.c  sort_32.c  util.c
test/: 1  mine  mine_err  test.sh  test_nm.py  test_otool.py  their
test2/: 1  2  ft_nm  p1  test_moins_facile
test_david/: 2  p1  test.sh  test_moins_facile.c
